# GitHubOCR----PaddleOCR

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
fixtures/expectations/: case_easyocr.json  case_pytesseract.json
fixtures/repos/case_easyocr/: requirements.txt
fixtures/repos/case_easyocr/app/: main.py
fixtures/repos/case_pytesseract/: requirements.txt
fixtures/repos/case_pytesseract/app/: main.py
gh_ocr_paddle_agent/: __init__.py  cli.py
gh_ocr_paddle_agent/core/: __init__.py  config.py  evaluation.py  inspect.py  models.py  source.py  verification.py
gh_ocr_paddle_agent/detectors/: __init__.py  ocr_stack.py  repository.py
gh_ocr_paddle_agent/generators/: __init__.py  paddle_template.py  rewrite.py
gh_ocr_paddle_agent/graph/: workflow.py
gh_ocr_paddle_agent/storage/: runs.py
tests/: test_detectors.py  test_rewrite.py  test_workflow.py
web/: streamlit_app.py
